# src/main/resources/api-docs.yaml
@@ -321,7 +321,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/TrainingPlanRequest'
+              $ref: '#/components/schemas/TrainingPlanRequestDTO'
         required: true
       responses:
         "201":
@@ -408,7 +408,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/TrainingPlanRequest'
+              $ref: '#/components/schemas/TrainingPlanRequestDTO'
         required: true
       responses:
         "200":
